# qgis_demo1

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  JwGeometry.cpp  JwGeometry.h  README.md  config.h  config.h.in  constants.cpp.in  constants.h.in  main.cpp  main2.cpp  main3.cpp  main3d0.cpp  main3d1.cpp  main3d2.cpp  main4.cpp  main5.cpp  test_main.cpp  test_main.h
.run/: qgis_demo3d1.run.xml  qgis_demo4.run.xml
cmakes/: FindQGIS.cmake
config/: settings.yaml
core/enums/: PaperSpecification.cpp  PaperSpecification.h
core/qgis/: App.cpp  App.h
core/qgis/d3/: CameraUtil.cpp  CameraUtil.h  ImageCaptureHelper.cpp  ImageCaptureHelper.h
core/qgis/layout/: JwLayout.cpp  JwLayout.h  JwLayout3D.cpp  JwLayout3D.h  JwLegend.cpp  JwLegend.h
core/qgis/payload/: InputPoint.cpp  InputPoint.h
core/qgis/style/: StylePoint.cpp  StylePoint.h
core/utils/: ColorTransformUtil.cpp  ColorTransformUtil.h  FileUtil.cpp  FileUtil.h  FontUtil.cpp  FontUtil.h  ImageUtil.cpp  ImageUtil.h  JsonUtil.cpp  JsonUtil.h  NodeToMap.cpp  NodeToMap.h  QgsUtil.cpp  QgsUtil.h
doc/ai/: gpt4.md  o1-mini.md  o1-preview.md
doc/http/: template.http  住地采集表.xlsx  测试模板.xlsx
doc/yaml-cpp/: win.md
src/3d/: qgs3dmapcanvas.cpp  qgslayoutitem3dmap.cpp  qgslayoutitem3dmap.h
src/core/layout/: qgslayoutexporter.cpp
src/core/textrenderer/: qgstextdocumentmetrics.cpp
tests/: test_enum.cpp  test_json.cpp  test_utils.cpp  test_yaml.cpp
